<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_marginBottom="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginLeft="20sp"
    android:layout_marginEnd="20sp"
    android:layout_marginRight="20sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/input_user_escuela_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:text="@string/user_escuela_value" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/user_mail_value" />
        <EditText
            android:id="@+id/input_user_mail_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/user_key_value" />
        <EditText
            android:id="@+id/input_user_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/password" />
        <EditText
            android:id="@+id/input_user_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/user_date_of_birth_value" />
        <DatePicker
            android:id="@+id/input_user_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="12sp"
            android:background="@drawable/custom_button"
            android:textColor="@color/actionbar_text"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>
