<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_marginBottom="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginLeft="20sp"
    android:layout_marginEnd="20sp"
    android:layout_marginRight="20sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/user_key_value" />

        <EditText
            android:id="@+id/input_user_key_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/input_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="12sp"
            android:onClick="completeSignIn"
            android:text="@string/sign_in" />
    </LinearLayout>
</ScrollView>